--- a/index.html
+++ b/index.html
@@ -8,7 +8,28 @@
     <link rel="stylesheet" href="estilos.css">
     <script src="index.js"></script>
 </head>
-<body>
-    
-</body>
+    <body>
+        <main>
+            <div class="box">
+             <div class="inner-box">
+                <input type="date" class="date" />
+                <button class="calculate">calculate</button>
+            </div>
+            </div>
+            <div class="box">
+                <div class="inner-boxs">
+                    <p class="number year">0</p>
+                    <p class="label">Years</p>
+                </div>
+            </div
+            <div class="inner-boxs">
+                <p class="number month">0</p>
+                <p class="label">Months</p>
+            </div>
+            <div class="inner-boxs">
+                <p class="number day">0</p>
+                <p class="label">Days</p>
+            </div>
+        </main>
+    </body>
 </html>
