--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Age Calculator</title>
+    <title>Calculadora de Edad</title>
     <link rel="stylesheet" href="estilos.css">
     <script src="index.js"></script>
 </head>
@@ -13,22 +13,22 @@
             <div class="box">
              <div class="inner-box">
                 <input type="date" class="date" />
-                <button class="calculate">calculate</button>
+                <button class="calculate">calcula</button>
             </div>
             </div>
             <div class="box">
                 <div class="inner-boxs">
                     <p class="number year">0</p>
-                    <p class="label">Years</p>
+                    <p class="label">Años</p>
                 </div>
             </div
             <div class="inner-boxs">
                 <p class="number month">0</p>
-                <p class="label">Months</p>
+                <p class="label">Meses</p>
             </div>
             <div class="inner-boxs">
                 <p class="number day">0</p>
-                <p class="label">Days</p>
+                <p class="label">Dias</p>
             </div>
         </main>
     </body>
